--- a/_includes/post.html
+++ b/_includes/post.html
@@ -17,7 +17,7 @@
           </span>
         </p>
         {% if page.image_display %}
-          <img class="post-feature-img" src="{{page.image}}" alt="{{page.image_description}}" title="{{page.image_description}}">
+          <img class="post-feature-img" src="{{site.baseurl}}{{page.image}}" alt="{{page.image_description}}" title="{{page.image_description}}">
         {% endif %}
       </header>
 
