--- a/_includes/paginated_pages.html
+++ b/_includes/paginated_pages.html
@@ -59,7 +59,7 @@
   %}
 
   <div class="our-blog">
-    <div class="blog-posts container">
+    <div class="blog-posts grid-container">
       <div class="blog-posts-row">
         {% for item in paginator.posts %}
           <article class="blog-post-col">
