Make video box min content

--- a/_sass/pages/_accessibility_toolkit.scss
+++ b/_sass/pages/_accessibility_toolkit.scss
@@ -172,3 +172,9 @@ p code {
 iframe {
   border: none;
 }
+
+.page-work-toolkits-accessibility-guide-training-videos {
+  .example {
+    width: min-content;
+  }
+}
