Indent mobile header nav sub items

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -254,7 +254,7 @@
 .dropdown-item {
   color: $gray-light;
   font-family: $font-family-mono;
-  padding-left: 15px;
+  padding-left: 2rem;
 
   &:focus,
   &:hover {
