Scope mobile nav indent to mobile

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -256,6 +256,10 @@
   font-family: $font-family-mono;
   padding-left: 2rem;
 
+  @include media-breakpoint-up(md) {
+    padding-left: 1rem;
+  }
+
   &:focus,
   &:hover {
     color: $brand-primary;
