Add See all posts and table footer style

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -26,6 +26,9 @@
       </div>
 
       <footer class="post-footer">
+        <a class="post-footer__see-all mb-5" href="/thoughts/blog/">
+          <i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i>See all blog posts
+        </a>
         {% if page.contributors %}
           <div class="post-contributors">
             {% include post_authorship.html
