--- a/_includes/project.html
+++ b/_includes/project.html
@@ -140,6 +140,10 @@
       </div>
       {% endif %}
     </div>
+
+    <a class="post-footer__see-all mt-5" href="/work/experience/">
+      <i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i>See all case studies
+    </a>
   </div>
 </article>
 
