--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -76,6 +76,12 @@
   }
 }
 
+.post-footer__see-all {
+  display: inline-block;
+  font-family: $font-family-mono;
+  font-size: $font-size-small;
+}
+
 .blog-post-title {
   line-height: 1.3;
   font-size: $font-size-x-large;
