--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -79,6 +79,14 @@
     overflow-x: auto;
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
+
+  tfoot {
+    td {
+      border-top-style: solid;
+      font-weight: bold;
+      font-size: $font-size-small;
+    }
+  }
 }
 
 .pullquote {
