Make cta component a section

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,4 +1,4 @@
-<div class="page-subfooter">
+<section class="page-subfooter">
   <div class="page-subfooter-content">
     <div class="page-subfooter-header-row">
       <div class="page-subfooter-header-col">
@@ -27,4 +27,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
