--- a/_includes/filter_component.html
+++ b/_includes/filter_component.html
@@ -66,7 +66,7 @@
         <div>
           <h2 class="mb-0 header-display-4">
             <div class="text-ink">
-              Filters
+              Filter by category
             </div>
           </h2>
         </div>
