--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -127,13 +127,13 @@
 
   .filter__heading {
     font-family: $font-family-sans-serif;
-    font-size: $font-size-x-large;
+    font-size: $font-size-large;
     font-weight: bold;
     margin-bottom: 0.5em !important;
   }
 
   ul {
-    font-size: $font-size-small;
+    font-size: $font-size-xx-small;
     line-height: 2;
   }
 }
