Adjust tags style

--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -837,7 +837,7 @@ $badge-danger-bg: $brand-danger !default;
 
 $badge-color: $white !default;
 $badge-link-hover-color: $white !default;
-$badge-font-size: $font-size-xxx-small !default;
+$badge-font-size: $font-size-xx-small !default;
 $badge-font-weight: $font-weight-bold !default;
 $badge-padding-x: 0.4em !default;
 $badge-padding-y: 0.25em !default;
