Move See all posts to bottom

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -23,9 +23,6 @@
   </div>
 
   <footer class="post-footer">
-    <a class="post-footer__see-all mb-5" href="/thoughts/blog/">
-      <i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i>See all blog posts
-    </a>
     {% if page.contributors %}
       <div class="post-contributors">
         {% include post_authorship.html
@@ -100,5 +97,9 @@
         <ul>{{related_post_markups}}</ul>
       </div>
     {% endif %}
+
+    <a class="post-footer__see-all" href="/thoughts/blog/">
+      <i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i>See all blog posts
+    </a>
   </footer>
 </article>
