--- a/_includes/project.html
+++ b/_includes/project.html
@@ -138,7 +138,7 @@
   </div>
   {% endif %}
 
-  <a class="post-footer__see-all mt-5" href="/work/experience/">
+  <a class="post-footer__see-all" href="/work/experience/">
     <i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i>See all case studies
   </a>
 </article>
