--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -80,6 +80,7 @@
   display: inline-block;
   font-family: $font-family-mono;
   font-size: $font-size-small;
+  margin-top: 3rem;
 }
 
 .blog-post-title {
