--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -169,6 +169,10 @@ h6 {
   font-size: $font-size-x-small !important;
 }
 
+.font-sm {
+  font-size: $font-size-small !important;
+}
+
 .font-md {
   font-size: $font-size-medium !important;
 }
