Update table footer

--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -81,6 +81,8 @@
 
   tfoot {
     td {
+      background-color: $gray-1;
+      border-bottom: none;
       border-top-style: solid;
       font-weight: bold;
       font-size: $font-size-small;
