Remove background and added bottom border on table footer

--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -81,8 +81,7 @@
 
   tfoot {
     td {
-      background-color: $gray-1;
-      border-bottom: none;
+      border-bottom-style: solid;
       border-top-style: solid;
       font-weight: bold;
       font-size: $font-size-small;
