--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 preload: hero-toolkits.svg
+image: /img/toolkits/toolkit-social.png
+image_description: Banner of Skylight's Toolkit.
 ---
 
 {% include hero_banner.html
