Update toolkit social share img alt text

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -2,7 +2,7 @@
 layout: default
 preload: hero-toolkits.svg
 image: /img/toolkits/toolkit-social.png
-image_description: Banner of Skylight's Toolkit.
+image_description: A collection of different tools.
 ---
 
 {% include hero_banner.html
