--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
             <a class="dropdown-item" href="{{site.baseurl}}/company/about/">About us</a>
             <a class="dropdown-item" href="{{site.baseurl}}/company/values/">Our values</a>
             <a class="dropdown-item" href="{{site.baseurl}}/company/press/">Press</a>
-            <a class="dropdown-item" href="https://skylight-swag.myshopify.com/">Swag store</a>
+            <a class="dropdown-item" href="https://skylight-swag.myshopify.com/">Store</a>
           </div>
         </li>
         <li class="nav-item nav-item--work dropdown">
