--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
               <li><a href="/company/values/">Values</a></li>
               <li><a href="/company/press/">Press</a></li>
               <li><a href="/company/policies/">Policies</a></li>
-              <li><a href="https://skylight-swag.myshopify.com/">Swag</a></li>
+              <li><a href="https://skylight-swag.myshopify.com/">Store</a></li>
             </ul>
           </div>
         </div>
