--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 preload: hero-toolkits.svg
-image: /img/toolkits/toolkit-social.png
+image: /img/toolkit-social.png
 image_description: A collection of different tools.
 ---
 
