--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -2,7 +2,7 @@
 layout: default
 preload: hero-toolkits.svg
 image: /img/toolkit-social.png
-image_description: A collection of different tools.
+image_description: Skylight toolkit banner showing a collection of different tools.
 ---
 
 {% include hero_banner.html
