add remote work icon

--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -18,7 +18,7 @@
         {{ item.title }}
       </a>
       <p class="open-positions__location">
-        <i class="fa fa-globe mr-2"></i>{{ item.location }}
+        <img class="icon--remote-work mr-2" src="/img/join/remote-work.svg" alt="">{{ item.location }}
       </p>
       <div class="mt-1 open-positions-summary">
         {{ item.summary | markdownify }}
