--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -19,6 +19,11 @@
   svg {
     height: 50px;
   }
+
+  .icon--remote-work {
+    width: 18px;
+    vertical-align: text-bottom;
+  }
 }
 
 .join-quote__byline {
