--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -95,7 +95,7 @@
   margin-inline: initial;
 
   &::before {
-    content: url(/img/alert/quote.svg);
+    content: url(/img/icons/quote.svg);
     width: 2rem;
     opacity: 1;
 
