Rm extra space from secondary col

--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -123,10 +123,13 @@ $home-cta-spacing: 6rem;
   @extend %mx-auto;
 }
 
+.landing-content-primary-col {
+  @extend %mb-4;
+}
+
 .landing-content-primary-col,
 .landing-content-secondary-col {
   @extend %col-lg-8;
-  @extend %mb-4;
 }
 
 .landing-content-secondary-col {
