--- a/_includes/head.html
+++ b/_includes/head.html
@@ -116,7 +116,7 @@
   <meta property="og:url" content="{{canonical_url}}">
   <meta property="og:image" content="{{image}}">
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:creator" content="@{{twitter_username}}">
   <meta name="twitter:site" content="@{{twitter_username}}">
   <meta name="twitter:title" content="{{title}}">
