--- a/_sass/layout/_cta.scss
+++ b/_sass/layout/_cta.scss
@@ -57,9 +57,7 @@
   }
 
   .hero-banner {
-    background-position: top -49px center;
-    background-size: initial !important;
-    position: relative;
+    // background-size: initial !important;
 
     // &::after {
     //   background-image: url(/img/shapesbg-right.svg);
