--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -4,9 +4,7 @@
   {% endif %} hero-banner"
   {% if include.image %}
     style="
-      background-image: url(/img/{{ include.image }});
-      background-repeat: no-repeat;
-      background-size: cover;"
+      background-image: url(/img/{{ include.image }});"
   {% endif %}
 >
 <header class="hero hero-banner mb-5 {% if include.class %}{{ include.class }}{% endif %}">
