--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -86,6 +86,18 @@
   }
 }
 
+.page-team,
+.page-press,
+.page-our-services,
+.page-join-us,
+.page-connect {
+  .hero-banner {
+    @include media-breakpoint-up(lg) {
+      background-size: 1300px;
+    }
+  }
+}
+
 .hero-banner {
   background-position: top center;
   background-size: cover;
