--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -21,8 +21,10 @@
   }
 
   .icon--remote-work {
-    width: 18px;
+    height: auto;
+    margin-right: 0.5rem;
     vertical-align: text-bottom;
+    width: 18px;
   }
 }
 
