--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-preload: hero-toolkits.svg
+preload: hero-toolkit.svg
 image: /img/toolkit-social.png
 image_description: Skylight toolkit banner showing a collection of different tools.
 ---
 
 {% include hero_banner.html
   color = "blue"
-  image = 'hero-toolkits.svg'
+  image = 'hero-toolkit.svg'
   class = "hero--toolkits"
 %}
 
