--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -1,3 +1,8 @@
+:root {
+  --color-land: #1d5392;
+  --color-water: #b5d2e3;
+}
+
 .page-join-us {
   .join__quote {
     font-size: $font-size-x-large;
@@ -21,7 +26,7 @@
   }
 
   .icon--remote-work {
-    height: auto;
+    height: 25px;
     margin-right: 0.5rem;
     width: 18px;
   }
@@ -78,7 +83,6 @@
     }
 
     p {
-      display: flex;
       font-size: $font-size-x-small;
     }
   }
@@ -108,6 +112,7 @@
 
 .open-positions__location {
   color: $gray;
+  display: flex;
 }
 
 .care-square {
