--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -20,7 +20,7 @@ $home-cta-spacing: 6rem;
 
   &::before {
     background-image: url("../img/hero-mobile.svg");
-    background-position: right 4px bottom;
+    background-position: 0 bottom;
     background-repeat: no-repeat;
     background-size: 100% auto;
     opacity: 1;
