--- a/_includes/card_list.html
+++ b/_includes/card_list.html
@@ -19,7 +19,7 @@
   <div class="{{prefix}}s-row {{hanging_col_size_css_class}}">
     {% for item in collection | limit: limit %}
       <article class="{{prefix}}-col">
-        <div class="{{prefix}}-card card-link" data-href="{{item.permalink}}" tabindex="-1" data-target="_blank">
+        <div class="{{prefix}}-card card-link" data-href="{{item.permalink}}" tabindex="-1">
           <div role="img" class="{{prefix}}-img" style="background-image: url({{item.image}});" title="{{item.image_description}}"></div>
           <div class="{{prefix}}-block">
             {% if item.title_tag %}
