--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -17,7 +17,11 @@
   justify-content: center;
   display: flex;
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
+    min-height: 25.7vw;
+  }
+
+  @media only screen and (min-width: 1140px) {
     min-height: 294px;
   }
 }
@@ -88,7 +92,7 @@
 
 .page-team {
   .hero-banner {
-    @include media-breakpoint-up(lg) {
+    @media only screen and (min-width: 1140px) {
       background-size: 1140px;
     }
   }
@@ -100,7 +104,7 @@
   background-repeat: no-repeat;
   position: relative;
 
-  @include media-breakpoint-up(lg) {
+  @media only screen and (min-width: 1140px) {
     background-size: 1300px;
   }
 
