--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -7,7 +7,7 @@ image_description: Skylight toolkit banner showing a collection of different too
 
 {% include hero_banner.html
   color = "blue"
-  image = 'hero-toolkit.svg'
+  image = "hero-toolkit.svg"
   class = "hero--toolkits"
 %}
 
