--- a/_sass/pages/_projects.scss
+++ b/_sass/pages/_projects.scss
@@ -4,7 +4,7 @@
 
 .page-our-experience {
   .page-header-1 {
-    @extend %mb-5;
+    margin-bottom: 2.5rem !important;
   }
 
   .filter-post-tags {
