--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -54,10 +54,15 @@
       min-height: 400px;
     }
 
+    .hero-text {
+      margin-bottom: 0;
+      margin-top: 1.25rem;
+    }
+
     a {
       font-size: 32px;
       line-height: 32px;
-      margin-top: 1rem;
+      margin-top: 2rem;
 
       i {
         vertical-align: top;
