--- a/_includes/paginated_pages.html
+++ b/_includes/paginated_pages.html
@@ -64,7 +64,7 @@
         {% for item in paginator.posts %}
           <article class="blog-post-col">
             <div class="blog-post-card card-link" data-href="{{item.permalink | prepend: site.baseurl}}" tabindex="-1">
-              <div role="img" class="blog-post-img" style="background-image: url({{item.image | prepend: site.baseurl;}});" title="{{item.image_description}}"></div>
+              <div role="img" class="blog-post-img" style="background-image: url({{item.image | prepend: site.baseurl;}});" title="{{item.image_description | escape}}"></div>
               <div class="blog-post-block">
                 {% if item.title_tag %}
                   <p class="blog-post-title-tag">{{item.title_tag}}</p>
