--- a/_includes/paginated_pages.html
+++ b/_includes/paginated_pages.html
@@ -18,8 +18,10 @@
             {% endif %}
           </h2>
           <div class="mt-3">{{ item.summary | markdownify }}</div>
-          <h3 class="project-title-tag mb-1">Full story</h3>
-          <p><a href="{{ item.href }}">{{ item.title }}</a></p>
+          {% if item.href and item.title %}
+            <h3 class="project-title-tag mb-1">Full story</h3>
+            <p><a href="{{ item.href }}">{{ item.title }}</a></p>
+          {% endif %}
         </article>
       {% endfor %}
     </div>
