--- a/_includes/service_design_cta.html
+++ b/_includes/service_design_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
-  header = "Deliver better public services."
-  text = 'Ready to create transformative user experiences through service design? <br class="linebreak">Let’s get to work.'
+  header = "Deliver more public value."
+  text = 'Ready to create transformative user experiences <br class="linebreak"> through service design? Let’s get to work.'
   text_css_class = "page-subfooter-text-col"
   cta_path = "mailto:hello@skylight.digital"
   cta = "Contact us"
