Give the talk footer cta a hover state

--- a/_includes/paginated_pages.html
+++ b/_includes/paginated_pages.html
@@ -193,7 +193,7 @@
               <p class="card-text">{{ item.event }}</p>
             </div>
             <div class="blog-post-footer">
-              <span class="text-primary">
+              <span class="blog-post-footer-cta">
                 {% if item.type == "video" %}
                   Watch video
                 {% elsif item.type == "podcast" %}
