--- a/_includes/service_design_cta.html
+++ b/_includes/service_design_cta.html
@@ -1,5 +1,5 @@
 {% include cta.html
-  header = "Deliver more public value."
+  header = "Deliver better services."
   text = 'Ready to create transformative user experiences <br class="linebreak"> through service design? Let’s get to work.'
   text_css_class = "page-subfooter-text-col"
   cta_path = "mailto:hello@skylight.digital"
