--- a/_includes/project.html
+++ b/_includes/project.html
@@ -107,7 +107,7 @@
           <ul>
             {% for post in page.news_posts %}
             <li>
-              <a href="{{post.url}}">{{post.title}}</a>
+              <a href="{{post.url}}">{{post.title | markdownify }}</a>
             </li>
             {% endfor %}
           </ul>
