--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -2,7 +2,7 @@
   <div class="testimonial">
     <blockquote>
       <p class="testimonial-quote">
-        “You’d be hard pressed to find a greater assemblage of digital talent.”
+        “You won’t find a more talented team technologists than Skylight.”
       </p>
       <div class="d-flex justify-content-center my-4">
         <div class="page-subfooter__divider"></div>
